Changed /recipes/fullRecipe response content
